putting in resume.pdf

--- a/ProfessionalSummary.tex
+++ b/ProfessionalSummary.tex
@@ -1,7 +1,7 @@
 
 \fontfamily{lmss}\selectfont
-\begin{itemize}
-    \item Highly skilled computational scientist and software developer with expertise in high performance computing (HPC), runtime systems, and parallel programming models. 
-    \item Proven track record of contributions to GPU parallel programming standards, AI-assisted tools for profiling and debugging, and runtime systems. 
-    \item Effective communicator and team player with a strong publication record of over 25 publications. 
+\begin{itemize}[itemsep=-0em]
+    \item Highly skilled computational scientist and software developer with expertise in high performance computing (HPC), runtime systems, and parallel programming models for GPU-based clusters. 
+    \item Proven track record of contributions to parallel programming standards, open-source software for AI-assisted tools for profiling and debugging, and research on adaptive runtime systems. 
+    \item Effective communicator and collaborator with a strong record of publications and software projects. 
 \end{itemize}
