--- a/listOfAwards.tex
+++ b/listOfAwards.tex
@@ -1,7 +1,9 @@
-\begin{itemize} 
+\comments{ 
+\begin{itemize}[itemsep=-0.1em] 
 %\item 2018 Argonne Training Program on Exascale Computing Invitee and Participant
-\item SC 2017 Early Career Program Invitee and Participant
-\item 2015 Heidelberg Laureate Forum Invitee and Participant.
+%\item SC 2017 Early Career Program Invitee and Participant
+\item 2015 Heidelberg Laureate Forum Invitee and Participant: I was invited to attend a forum to engage with winners of the Turing Award and Abel Prize. 
 %\item Recipient of Travel Grant for 2015 Heidelberg Laureate Forum
-\item Fellow at Lawrence Livermore National Laboratory through Lawrence Scholar Program.
+\item Lawrence Scholar at Lawrence Livermore National Laboratory: I received a fellowship to be emplyed at LLNL while doing my PhD.   
 \end{itemize}
+}
