--- a/resume.tex
+++ b/resume.tex
@@ -30,7 +30,7 @@
    \textbf{Phone:} \href{tel: +01 217-369-7996}{217-369-7996} | \textbf{Email}: \href{mailto:vivek.lkale@gmail.com}{vivek.lkale@gmail.com} | 
       \textbf{LinkedIn}: \href{http://linkedin.com/in/vlkale}{linkedin.com/in/vlkale} 
 
-     \textbf{Website}: \href{http://vlkale.github.io}{vlkale.github.io} | \textbf{US Citizen with Secret Clearance}
+\textbf{Github}: \href{http://github.com/vlkale}{http://github.com/vlkale} | \textbf{Website}: \href{http://vlkale.github.io}{vlkale.github.io} | \textbf{US Citizen with Secret Clearance}
 \end{center}
 %\vspace{0.5cm}
 \noindent\rule{\linewidth}{0.4pt}
@@ -76,9 +76,21 @@
 \input{listOfSkillSetsForResume}
 %\vspace*{-0.2in}
 
-\section*{\fontfamily{lmss}\selectfont Projects} 
+\section*{\fontfamily{lmss}\selectfont Open-source Software Projects} 
 %\vspace{-0.01in}
 \input{listOfProjects-for1pagerResume} 
+
+
+
+%\section*{\fontfamily{lmss}\selectfont Awards} 
+%\vspace{-0.01in}
+%\input{listOfAwards} 
+
+
+
+\section*{\fontfamily{lmss}\selectfont Hobbies} 
+%\vspace{-0.01in}
+\input{listOfHobbies} 
 
 %\section{\fontfamily{lmss}\selectfont Relevant Courses} 
 %\vspace{-0.001in}
