--- a/listofExperiences-longresume.tex
+++ b/listofExperiences-longresume.tex
@@ -4,60 +4,59 @@
 % TODO: get checked by recruiters
 
 \newcommand{\myExpOne}{
-\item Technical lead for HPC Tools and Runtime Systems R\&D for Sandia's Exascale Software.
-\item Pathfinding and software engineering for tools for Kokkos integrated with (1) HPC performance monitoring (LDMS) and feedback and (2) PMPI and adaptive runtime systems for MPI.
-%\item Implementing and specifying tooling API features for Kokkos Tools for OpenMP, OpenACC, MPI, and C++ standards.
+\item Directing HPC Tools and Runtime Systems R\&D for Sandia's Exascale Software.
+\item Implementing tooling for Kokkos that is integrated with (1) HPC performance monitoring (LDMS) and feedback and (2) PMPI and adaptive runtime systems for MPI.
+\item Implementing and specifying tooling API features for Kokkos Tools for OpenMP, OpenACC, MPI, and C++ standards.
 \item Developing AI-assisted HPC Tools through coderosetta.com for Kokkos-CUDA and APEX Kokkos Tools autotuning, resulting in an NVIDIA GTC 2025 poster. 
 }
 
 \newcommand{\myExpTwo}{
-	\item Code development and maintainance of Kokkos Tools by improving build system, tooling overheads, CI, auto-tuning, nvtx/roctx/vtune integration, with 15 github PRs merged.  
-   % \item Contributed to autotuning features to the Kokkos 4.5 release. 
+	\item Owner and IC of Kokkos Tools: merged 15 github Pull Requests (PRs), averaging 40 lines of code, that improved CMake and Spack Build System, reducing tooling overheads, and tool development.  
+    \item Contributed to autotuning features to the Kokkos 4.5 release. 
 	\item Developed an LLVM-based SymEx tool to debug Kokkos programs that detected 7 Kokkos bug examples with no false positives, leading to a paper at SC24's Correctness workshop. 
     \item Implemented prototype LLVM OpenMP loop transformation directive 'split', leading to a 1.24x speedup for a OpenMP + CUDA benchmark and OpenMP 6.0's split directive. 
   %  \item Developed and implemented CPU+GPU auto-tuning optimizations, leading to a 1.2x speedup. 
-    \item Pathfinding for OpenMP multi-GPU features for NVIDIA DGX, as well as AWS, Google Cloud and OCI, leading to 19 proposed features for OpenMP 6.1/7.0.
+    \item Problem solving and collaboration to support OpenMP multi-GPU features for AWS, Google Cloud and OCI, leading to 19 proposed features for OpenMP 7.0.
     
     %which led to technical report on the OpenMP Set object. 
 
-   % \item Porting HPC Tools and Runtime Systems to exascale+multicloud, collaborating with AWS, Google Cloud and Oracle OCI. 
+    \item Porting HPC Tools and Runtime Systems to exascale+multicloud, collaborating with AWS, Google Cloud and Oracle OCI. 
 
 %    \item Impacted six different production-level scientific applications running on El Capitan and Frontier supercomputers. 
 }
 \newcommand{\myExpThree}{
   % \item Contributed to developing an LLVM OpenMP implementation, specifically the OpenMP implementation's compiler and its runtime, targetted for Department of Energy's upcoming Exascale Supercomputer platforms. 
    \item Implemented OpenMP user-defined multiGPU scheduling for LLVM, offering 2x speedup over using an MPI parallelization, leading to two papers at IWOMP 24. 
-   \item Implemented performance optimizations in LLVM for OpenMP asynchronous GPU offloading that showed 1.23x speedup, leading to a paper at SC22's HiPar. 
-   \item Developed performance benchmarks that evaluated 5 major vendor OpenMP GPU implementations, leading to a journal paper and two workshop papers. 
+   \item Problem solving by implementing optimizations in LLVM for OpenMP asynchronous GPU offloading that showed 1.23x speedup, leading to a paper at SC22's HiPar. 
+   \item Critical thinking by developing performance benchmarks to evaluate OpenMP implementations on GPUs, leading to a journal paper and two workshop papers. 
 %  \item Developed benchmarks and evaluating OpenMP implementations, e.g., LLVM's OpenMP, NVIDIA's OpenMP, on Exascale Supercomputers.
-   \item Demonstrated technical leadership as technical Project Manager for ECP SOLLVE project, submitting 9 ECP milestones, organizing 6 OpenMP GPU hackathons, and defining 2 project KPIs. 
- %and voting in 5 OpenMP Committee meetings. 
+   \item Technical leadership as demonstrated by leading OpenMP GPU hackathons and training, technical Project Manager for ECP SOLLVE project; representative in OpenMP ARB
    }
 
 \newcommand{\myExpFour}{
 \item Implemented and researched LLVM OpenMP User-defined Loop Schedules (UDS). 
 \item Added a UDS feature to Charm++'s CkLoop, with one PR merged. 
-\item Analysis and optimization of science simulations on NVIDIA GPUs via CUPTI and auto-tuning.
+\item Analysis and optimization of science simulations on NVIDIA GPUs via CUPTI and auto-tuning.  
 }
 
 \textbf{Sandia National Laboratories}\\
 \textit{Principal Member of Technical Staff II} \hfill \textit{July 2024 - Present}
 %\vspace{-0.02in}
 \noindent
-\begin{itemize}[itemsep=-0.1em]\onlyitems[include={1,2}]
+\begin{itemize}\onlyitems[include={1,2}]
 \myExpOne
 \end{itemize}
 
 \noindent
 \textit{Senior Member of Technical Staff} \hfill \textit{August 2022 - June 2024}
 %\vspace{-0.02in}
-\begin{itemize}[itemsep=-0.1em]
+\begin{itemize}
 \myExpTwo 
 \end{itemize} 
 \textbf{Brookhaven National Laboratory}\hfill
 \textit{Assistant Computational Scientist} \hfill \textit{May 2019 - August 2022}
 %\vspace{-0.02in}
-\begin{itemize}[itemsep=-0.1em]
+\begin{itemize}
 \myExpThree
 \end{itemize}
 
@@ -65,7 +64,7 @@
 \textbf{Charmworks and ISI}\hfill
 \textit{Software Engineer} \hfill \textit{Jan 2016 - April 2019}
 \vspace{-0.02in}
-\begin{itemize}[itemsep=-0.1em]
+\begin{itemize}
 \myExpFour
 \end{itemize}
 \noindent
@@ -101,7 +100,7 @@
 \textbf{University of Illinois}\hfill
 \textit{Postdoctoral Associate} \hfill \textit{Jul 2015 - Dec 2015}
 %\vspace*{-0.02in}
-\begin{itemize}[itemsep=-0.1em]
+\begin{itemize} 
 %\item Developed LLVM OpenMP lw-sched library that allows application programmers to use strategies from dissertation.
 \item Exhibited problem solving: made MPI+OpenMP+OpenACC science simulation code 1.24x faster.
 %\item Incorporated over-decomposition and locality awareness into low-overhead OpenMP loop scheduling strategies. 
