New resume.pdf file

--- a/ProfessionalSummary.tex
+++ b/ProfessionalSummary.tex
@@ -2,6 +2,6 @@
 \fontfamily{lmss}\selectfont
 \begin{itemize}[itemsep=-0em]
     \item Highly skilled computational scientist and software developer with expertise in high performance computing (HPC), runtime systems, and parallel programming models for GPU-based clusters. 
-    \item Proven track record of contributions to parallel programming standards, open-source software for AI-assisted tools for profiling and debugging, and research on adaptive runtime systems. 
+    \item Proven track record of contributions to parallel programming standards, open-source software for AI-assisted HPC tools for profiling and debugging, and research on adaptive load balancing. 
     \item Effective communicator and collaborator with a strong record of publications and software projects. 
 \end{itemize}
