--- a/listOfProjects-for1pagerResume.tex
+++ b/listOfProjects-for1pagerResume.tex
@@ -1,7 +1,7 @@
 \begin{enumerate}
 % \item PLASMA/MAGMA and ParSec: static+dynamic scheduling for CALU
 % \item MPICH: MPIch shared memory extensions and integrated runtime
-\item \textbf{OpenMP multi-GPU support}: User-defined multi-GPU  loop scheduling for clang/LLVM OpenMP. \\ \textit{Repo}: \url{https://github.com/sollve/openmp-rts}
-\item \textbf{Kokkos Tools}: Kokkos Tools and runtime systems for C++.\\ \textit{Code Repo}: \url{https://github.com/kokkos/kokkos-tools}
-\item \textbf{MPI Slack Predictor}: MPI runtime tool using libunwind to predict slack trace \\ \textit{Code Repo}: \url{https://github.com/vlkale/slack-trace}
+\item \textbf{OpenMP multi-GPU support}: User-defined multi-GPU  loop scheduling for clang/LLVM OpenMP. \\ \textit{Repository}: \url{https://github.com/sollve/openmp-rts}
+\item \textbf{Kokkos Tools}: Kokkos Tools and runtime systems for C++.\\ \textit{Repository}: \url{https://github.com/kokkos/kokkos-tools}
+\item \textbf{MPI Slack Predictor}: MPI runtime tool using libunwind to predict slack trace \\ \textit{Repository}: \url{https://github.com/vlkale/slack-trace}
 \end{enumerate}
