--- a/resume.tex
+++ b/resume.tex
@@ -27,7 +27,7 @@
     \Large \textbf{Vivek L. Kale} \\
     \normalsize
 
-   \textbf{Phone:} \href{tel: +01 217-369-7996}{217-369-7996} | \textbf{Email}: \href{mailto:vivek.lkale@gmail.com}{vivek.lkale@gmail.com} | 
+   \textbf{Phone:} \href{tel: +01 217-369-7996}{217-369-7996} | \textbf{Email}: \href{mailto:vivek.lkale@gmail.com}{viveklkale@gmail.com} | 
       \textbf{LinkedIn}: \href{http://linkedin.com/in/vlkale}{linkedin.com/in/vlkale} 
 
 \textbf{Github}: \href{http://github.com/vlkale}{github.com/vlkale} | \textbf{Website}: \href{http://vlkale.github.io}{vlkale.github.io} | \textbf{US Citizen with Secret Clearance}
@@ -35,8 +35,7 @@
 %\vspace{0.5cm}
 \noindent\rule{\linewidth}{0.4pt}
 
-
-%\vspace{-0.1in}
+\vspace{-0.1in}
 %\moveleft\hoffset\vbox{\hrule width\resumewidth height 1pt}\smallskip
 %\begin{center} 
 %\fontfamily{lmss}\selectfont 
@@ -88,9 +87,9 @@
 
 
 
-\section*{\fontfamily{lmss}\selectfont Hobbies} 
+%\section*{\fontfamily{lmss}\selectfont Hobbies} 
 %\vspace{-0.01in}
-\input{listOfHobbies} 
+%\input{listOfHobbies} 
 
 %\section{\fontfamily{lmss}\selectfont Relevant Courses} 
 %\vspace{-0.001in}
