--- a/listofHobbies.tex
+++ b/listofHobbies.tex
@@ -1,4 +1,4 @@
 \begin{itemize}[itemsep=-0.2em]
     \item Piano: I played classical music for 8 years in high school and am currently practicing pop music.
-    \item Tennis: I played competitively in high school and  I now play relationally in a club.
+    \item Tennis: I played competitively in high school and  I now play recreationally in a club.
 \end{itemize}
