Updates from Overleaf

--- a/ProfessionalSummary.tex
+++ b/ProfessionalSummary.tex
@@ -1,5 +1,5 @@
 
-\fontfamily{lmss}\selectfont
+\fontfamily{\myResumeFont}\selectfont
 \begin{itemize}[itemsep=-0em]
     \item Highly skilled computational scientist and software developer with expertise in high performance computing (HPC), runtime systems, and parallel programming models for GPU-based clusters. 
     \item Proven track record of contributions to parallel programming standards, open-source software for AI-assisted HPC tools for profiling and debugging, and research on adaptive load balancing. 
