--- a/listOfProjects-for1pagerResume.tex
+++ b/listOfProjects-for1pagerResume.tex
@@ -1,7 +1,9 @@
+
 \begin{enumerate}
 % \item PLASMA/MAGMA and ParSec: static+dynamic scheduling for CALU
 % \item MPICH: MPIch shared memory extensions and integrated runtime
-\item \textbf{OpenMP multi-GPU support}: User-defined multi-GPU loop scheduling for clang/LLVM OpenMP. \\ \textit{Repository}: \url{https://github.com/vlkale/taskGPUSched}
+%User-defined multi-GPU loop scheduling for clang/LLVM OpenMP. \\ 
+\item \textbf{OpenMP multi-GPU support}: \textit{Repository}: \url{https://github.com/vlkale/taskGPUSched}
 %\item \textbf{OpenMP multi-GPU support}: User-defined multi-GPU loop scheduling for clang/LLVM OpenMP https://github.com/vlkale/ParallelProgrammingWithOpenACC/tree/master/Chapter08 
 \item \textbf{Kokkos Tools}: Kokkos Tools and runtime systems for C++.\\ \textit{Repository}: \url{https://github.com/kokkos/kokkos-tools}
 \item \textbf{MPI Slack Predictor}: MPI runtime tool using libunwind to predict slack trace \\ \textit{Repository}: \url{https://github.com/vlkale/slack-trace}
