--- a/listOfSkillSetsForResume.tex
+++ b/listOfSkillSetsForResume.tex
@@ -1,7 +1,7 @@
 \fontfamily{lmss}\selectfont
 {\textbf{Languages}: C, C++, CUDA, python, Fortran, Java,  bash, csh, VHDL, Matlab};\\
-{\textbf{Libraries}:  OpenMP (gomp, llvm), Kokkos, MPI (mpich), Charm++, OpenACC (pgi), Globus},  mpi4py, pyomp, matplotlib, pandas, numpy; \\
+{\textbf{Libraries}:  OpenMP and OpenACC (GCC, LLVM), Kokkos, MPI (MPIch), Charm++,  pandas, numpy; \\
 %{\textbf{Math}: cuBLAS, MAGMA, PetSC}\\
 %{\textbf{Data Analysis}:  ; \\ 
 {\textbf{Tools}: Kokkos Tools, PMPI, ompt, PAPI, nvtx, NVIDIA Nsight, tau, hpcToolkit, VTune, clang-tidy, KLEE,  gprof, gdb}; \\
-{\textbf{Utilities}: git, cmake, spack, vi, clang-format, gnuplot, emacs, autoconf, LaTeX, docker};\\
+{\textbf{Utilities}: git, cmake, spack, vi, clang-format, gnuplot, emacs, autoconf, LaTeX, docker,  matplotlib};
